moved dependency on mybatis3 #260

--- a/terasoluna-gfw-mybatis3/pom.xml
+++ b/terasoluna-gfw-mybatis3/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
+            <version>${org.mybatis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
