--- a/terasoluna-gfw-jpa/pom.xml
+++ b/terasoluna-gfw-jpa/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-jpa</artifactId>
-    <name>TERASOLUNA Global Framework for JPA</name>
+    <name>TERASOLUNA Server Framework for Java (5.x) for JPA</name>
     <description>Maven dependency definition for using JPA</description>
     <url>http://terasoluna.org</url>
 
