--- a/terasoluna-gfw-security-web/pom.xml
+++ b/terasoluna-gfw-security-web/pom.xml
@@ -79,6 +79,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <!-- == End Spring == -->
 
@@ -104,10 +105,12 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
         </dependency>
         <!-- == End Unit Test == -->
 
