--- a/terasoluna-gfw-web/pom.xml
+++ b/terasoluna-gfw-web/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- == End Unit Test == -->
 
     </dependencies>
