#329: Change JSTL artifact (javax.servlet:jstl -> org.apache.taglibs:taglibs-standard-jstlel)

--- a/terasoluna-gfw-web/pom.xml
+++ b/terasoluna-gfw-web/pom.xml
@@ -86,8 +86,8 @@
 
         <!-- == Begin Other JavaEE/SE APIs == -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
+            <groupId>org.apache.taglibs</groupId>
+            <artifactId>taglibs-standard-jstlel</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
