#368: travis-ci migrate to container-based infrastructure
(cherry picked from commit ab283978871b9c18e49ecfef764ad0582ca87791)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
+sudo: false
 language: java
 jdk:
   - oraclejdk7
   - openjdk7
   - openjdk6
 
+cache:
+  directories:
+    - $HOME/.m2
+
+install: true
 
 script:
-  - mvn install -f terasoluna-gfw-parent/pom.xml
-  - mvn install -f terasoluna-gfw-common/pom.xml
-  - mvn install -f terasoluna-gfw-jpa/pom.xml
-  - mvn install -f terasoluna-gfw-mybatis2/pom.xml
-  - mvn install -f terasoluna-gfw-recommended-dependencies/pom.xml
-  - mvn install -f terasoluna-gfw-recommended-web-dependencies/pom.xml
-  - mvn install -f terasoluna-gfw-web/pom.xml
-  - mvn install -f terasoluna-gfw-security-core/pom.xml
-  - mvn install -f terasoluna-gfw-security-web/pom.xml
+  - mvn install -U -f terasoluna-gfw-parent/pom.xml
+  - mvn install -U -f terasoluna-gfw-common/pom.xml
+  - mvn install -U -f terasoluna-gfw-jpa/pom.xml
+  - mvn install -U -f terasoluna-gfw-mybatis2/pom.xml
+  - mvn install -U -f terasoluna-gfw-recommended-dependencies/pom.xml
+  - mvn install -U -f terasoluna-gfw-recommended-web-dependencies/pom.xml
+  - mvn install -U -f terasoluna-gfw-web/pom.xml
+  - mvn install -U -f terasoluna-gfw-security-core/pom.xml
+  - mvn install -U -f terasoluna-gfw-security-web/pom.xml
