--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,11 @@ jdk:
   - oraclejdk7
   - openjdk7
   - openjdk6
+
 cache:
   directories:
     - $HOME/.m2
 
 install: true
 
-script: 
-  - mvn install -U -f terasoluna-gfw-parent/pom.xml
-  - mvn install -U -f terasoluna-gfw-common/pom.xml
-  - mvn install -U -f terasoluna-gfw-jodatime/pom.xml
-  - mvn install -U -f terasoluna-gfw-jpa/pom.xml
-  - mvn install -U -f terasoluna-gfw-mybatis3/pom.xml
-  - mvn install -U -f terasoluna-gfw-recommended-dependencies/pom.xml
-  - mvn install -U -f terasoluna-gfw-recommended-web-dependencies/pom.xml
-  - mvn install -U -f terasoluna-gfw-web/pom.xml
-  - mvn install -U -f terasoluna-gfw-security-core/pom.xml
-  - mvn install -U -f terasoluna-gfw-security-web/pom.xml
+script: ./mvn-build-all.sh
