--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -336,6 +336,16 @@
             <id>terasoluna-gfw-snapshots</id>
             <url>http://repo.terasoluna.org/nexus/content/repositories/terasoluna-gfw-snapshots/</url>
         </repository>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>Spring-milestone-repository</id>
+            <url>http://repo.springsource.org/milestone/</url>
+        </repository>
     </repositories>
     <dependencyManagement>
         <dependencies>
@@ -476,7 +486,7 @@
         <!-- == TERASOLUNA == -->
         <terasoluna.gfw.version>5.1.0-SNAPSHOT</terasoluna.gfw.version>
         <!-- == Spring IO Platform == -->
-        <io.spring.platform.version>1.1.3.RELEASE</io.spring.platform.version>
+        <io.spring.platform.version>2.0.0.RC1</io.spring.platform.version>
         <!-- == MyBatis3 == -->
         <org.mybatis.version>3.3.0</org.mybatis.version>
         <org.mybatis.spring.version>1.2.3</org.mybatis.spring.version>
