Add the dependency management of MyBatis3 on parent pom file #279
(cherry picked from commit 1c9fece61ea39e8fd1521fa7a06f79f3660e51cf)

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -421,13 +421,18 @@
             </dependency>
             <!-- == End Spring IO Platform == -->
 
-            <!-- == Begin Mybatis == -->
+            <!-- == Begin MyBatis == -->
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${org.mybatis.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis-spring</artifactId>
                 <version>${org.mybatis.spring.version}</version>
             </dependency>
-            <!-- == End Mybatis == -->
+            <!-- == End MyBatis == -->
 
             <!-- == Begin Dozer== -->
             <dependency>
