--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -496,7 +496,7 @@
         <!-- == TERASOLUNA == -->
         <terasoluna.gfw.version>5.1.0-SNAPSHOT</terasoluna.gfw.version>
         <!-- == Spring IO Platform == -->
-        <io.spring.platform.version>2.0.0.RC1</io.spring.platform.version>
+        <io.spring.platform.version>2.0.0.RELEASE</io.spring.platform.version>
         <!-- == MyBatis3 == -->
         <org.mybatis.version>3.3.0</org.mybatis.version>
         <org.mybatis.spring.version>1.2.3</org.mybatis.spring.version>
