change attribute name of @Compare #372

--- a/terasoluna-gfw-validator/src/test/resources/ValidationMessages.properties
+++ b/terasoluna-gfw-validator/src/test/resources/ValidationMessages.properties
@@ -4,4 +4,4 @@ org.terasoluna.gfw.common.validator.constraints.After.message = must be after {v
 org.terasoluna.gfw.common.validator.constraints.Before.message = must be before {value}
 org.terasoluna.gfw.common.validator.constraints.ByteMin.message = must be over {value} Bytes
 org.terasoluna.gfw.common.validator.constraints.ByteMax.message = must be under {value} Bytes
-org.terasoluna.gfw.common.validator.constraints.Compare.message = not match '{source}' and '{destination}'
+org.terasoluna.gfw.common.validator.constraints.Compare.message = not match '{left}' and '{right}'
