--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ cache:
 
 install: true
 
-script: ./mvn-build-all.sh
+script:
+  - ./mvn-build-all.sh clean install jacoco:report
+  - mvn -U coveralls:report -f terasoluna-gfw-parent/pom.xml
