--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -459,6 +459,31 @@
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-codepoints</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw.codepoints</groupId>
+                <artifactId>terasoluna-gfw-codepoints-jisx0201</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw.codepoints</groupId>
+                <artifactId>terasoluna-gfw-codepoints-jisx0208</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw.codepoints</groupId>
+                <artifactId>terasoluna-gfw-codepoints-jisx0208kanji</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw.codepoints</groupId>
+                <artifactId>terasoluna-gfw-codepoints-jisx0213kanji</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-recommended-dependencies</artifactId>
                 <version>${terasoluna.gfw.version}</version>
                 <type>pom</type>
