--- a/terasoluna-gfw-web-jsp/pom.xml
+++ b/terasoluna-gfw-web-jsp/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>terasoluna-gfw-parent</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>terasoluna-gfw-web</artifactId>
+  <artifactId>terasoluna-gfw-web-jsp</artifactId>
     <packaging>jar</packaging>
     <name>TERASOLUNA Server Framework for Java (5.x) for web</name>
     <description>Functionality that can be used on web</description>
@@ -57,6 +57,10 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>terasoluna-gfw-web</artifactId>
+        </dependency>
         <!-- == Begin TERASOLUNA == -->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -95,15 +99,6 @@
         </dependency>
         <!-- == End Other JavaEE/SE APIs == -->
 
-        <!-- == Begin Database == -->
-        <!-- H2 (for test) -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- == End Database == -->
-
         <!-- == Begin Unit Test == -->
         <dependency>
             <groupId>junit</groupId>
@@ -126,6 +121,6 @@
             <scope>test</scope>
         </dependency>
         <!-- == End Unit Test == -->
-
     </dependencies>
+
 </project>
