add coveralls config for new web-jsp project issues:#436

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -64,6 +64,7 @@
                             <jacocoReport>../terasoluna-gfw-common/target/site/jacoco/jacoco.xml</jacocoReport>
                             <jacocoReport>../terasoluna-gfw-jodatime/target/site/jacoco/jacoco.xml</jacocoReport>
                             <jacocoReport>../terasoluna-gfw-web/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>../terasoluna-gfw-web-jsp/target/site/jacoco/jacoco.xml</jacocoReport>
                             <jacocoReport>../terasoluna-gfw-security-web/target/site/jacoco/jacoco.xml</jacocoReport>
                             <jacocoReport>../terasoluna-gfw-validator/target/site/jacoco/jacoco.xml</jacocoReport>
                             <jacocoReport>../terasoluna-gfw-codepoints/target/site/jacoco/jacoco.xml</jacocoReport>
@@ -73,6 +74,7 @@
                             <sourceDirectory>../terasoluna-gfw-common/src/main/java</sourceDirectory>
                             <sourceDirectory>../terasoluna-gfw-jodatime/src/main/java</sourceDirectory>
                             <sourceDirectory>../terasoluna-gfw-web/src/main/java</sourceDirectory>
+                            <sourceDirectory>../terasoluna-gfw-web-jsp/src/main/java</sourceDirectory>
                             <sourceDirectory>../terasoluna-gfw-security-web/src/main/java</sourceDirectory>
                             <sourceDirectory>../terasoluna-gfw-validator/src/main/java</sourceDirectory>
                             <sourceDirectory>../terasoluna-gfw-codepoints/src/main/java</sourceDirectory>
@@ -386,6 +388,11 @@
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-web</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-web-jsp</artifactId>
                 <version>${terasoluna.gfw.version}</version>
             </dependency>
             <dependency>
