improve validation message of terasoluna-gfw-validator #468

--- a/terasoluna-gfw-validator/src/test/resources/ValidationMessages.properties
+++ b/terasoluna-gfw-validator/src/test/resources/ValidationMessages.properties
@@ -1,5 +1,5 @@
 # this file contains the default messages of JSR 303 bean validation for validations provided in the common library
 
-org.terasoluna.gfw.common.validator.constraints.ByteMin.message = must be greater than or equal to {value} Bytes
-org.terasoluna.gfw.common.validator.constraints.ByteMax.message = must be less than or equal to {value} Bytes
-org.terasoluna.gfw.common.validator.constraints.Compare.message = not match '{left}' and '{right}'
+org.terasoluna.gfw.common.validator.constraints.ByteMin.message = must be greater than or equal to {value} bytes
+org.terasoluna.gfw.common.validator.constraints.ByteMax.message = must be less than or equal to {value} bytes
+org.terasoluna.gfw.common.validator.constraints.Compare.message = invalid combination of {left} and {right}
