--- a/terasoluna-gfw-web-jsp/pom.xml
+++ b/terasoluna-gfw-web-jsp/pom.xml
@@ -100,6 +100,10 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+        </dependency>
         <!-- == End Other JavaEE/SE APIs == -->
 
         <!-- == Begin Database == -->
