--- a/terasoluna-gfw-mybatis3/pom.xml
+++ b/terasoluna-gfw-mybatis3/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
         <!-- == End MyBatis == -->
     </dependencies>
 
