--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -540,7 +540,7 @@
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
-                <version>3.1</version>
+                <version>${cglib.version}</version>
                 <scope>runtime</scope>
             </dependency>
             <!-- == End CGLIB == -->
